--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <div class="section-heading">
                     <h2>Menu</h2>
-                    <p>November 2017</p>
+                    <p>December 2017</p>
                 </div>
             </div>
         </div>
@@ -15,145 +15,95 @@
                 <div class="col-md-8 col-md-offset-2">
                     <ul>
                         <li>
-                            <strong>BBQ Bacon Onion Bombs</strong>
+                            <strong>Beef Stew</strong>
                             <ul>
-                                <li>Homemade meatballs wrapped in onion wrapped in bacon. Soon to be your fall favorite! Comes
-                                    with veggies. (Oven)</li>
+                                <li>The ultimate winter comfort meal! A delicious, veggie loaded stew slow cooked all day. Comes
+                                    with fresh baked bread. Your house will smell amazing for days! (Slow cooker and oven)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Day Before Roast</strong>
+                            <strong>Spicy Apple Glazed Meatballs</strong>
                             <ul>
-                                <li>Delicious roast slow cooked until it falls apart. Makes the best roast beef sandwiches with au jus! Comes with rolls and veggies. (Slow cooker)</li>
+                                <li>A sticky, sweet glaze to top juicy meatballs. Comes with rice and veggies. (Slow cooker)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Asian Five Spice Meatballs</strong>
+                            <strong>Texas Style Brisket</strong>
                             <ul>
-                                <li>Great Asian flavored meatballs, slow cooked all day. Comes with rice and veggies. (Slow cooker)</li>
+                                <li>Brisket cooked low and slow until it falls apart. Makes an amazing sandwich or baked potato
+                                    topping! Comes with rolls and veggies. (Slow cooker)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Orange Rosemary Chicken</strong>
+                            <strong>Chicken Taco Soup</strong>
                             <ul>
-                                <li>Citrus marinated chicken served with rice and veggies. (Baked)</li>
+                                <li>A flavorful, veggie loaded soup. It is my go-to for a filling meal in cold weather. Comes
+                                    with cheese. (Slow cooker)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Turkey Chili Nachos</strong>
+                            <strong>Honey Sriracha Chicken</strong>
                             <ul>
-                                <li>A delicious sauce to serve over nachos! Comes with tortilla chips and cheese. (Stovetop)
-                                    </li>
+                                <li>A little spice to go with a little sweet! This will be your new favorite take-out substitute.
+                                    Comes with rice and veggies. (Slow cooker)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Sweet and Spicy Bacon Wrapped Chicken</strong>
+                            <strong>Jamaican Jerk Chicken</strong>
                             <ul>
-                                <li>The name says it all! Bacon wrapped chicken seasoned with a little sweet and a little spice. (Baked)
-                                </li>
+                                <li>A little taste of the island to hold you over during the cold of winter! Chicken and veggies
+                                    served over rice. (Slow cooker)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Apple Glazed Pork with Cheesy Grits</strong>
+                            <strong>Maple Dijon Chicken</strong>
                             <ul>
-                                <li>Slightly sweet, seasoned pork served over cheesy grits. (Slow cooker)</li>
+                                <li>Delicious baked chicken and veggies. Comes with veggies. (Oven)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Sausage Cranberry Ragu</strong>
+                            <strong>Cranberry Pork Roast</strong>
                             <ul>
-                                <li>A fun seasonal dinner. This pasta sauce is a great combination of fall flavors. Comes with pasta. (Stovetop) </li>
+                                <li>Sweet, juicy pork roast slow cooked. It makes amazing sandwiches! Comes with rolls and veggies.
+                                    (Slow cooker)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Sweet Potato Turkey Hash</strong>
+                            <strong>Sausage with Onions and Peppers</strong>
                             <ul>
-                                <li>This is one of my favorite ways to use turkey! Sautéed sweet potatoes and turkey slightly sweetened with maple syrup. Perfect for breakfast or dinner! (Stovetop)</li>
+                                <li>An update to an old standby. Italian sausages cooked all day with veggies. Served over pasta.
+                                    (Slow cooker)</li>
                             </ul>
                         </li>
+
                         <li>
-                            <strong>Corn Chowder</strong>
+                            <strong>Parmesan Honey Pork Roast</strong>
                             <ul>
-                                <li>I love soup and this one has moved to the top of my favorites list! Slow cooked all day with
-                                    a touch of cream added at the end. (Slow cooker)</li>
+                                <li>Italian herbs and cheese slow cooked until the roast falls apart. Comes with veggies. (Slow
+                                    cooker)</li>
                             </ul>
                         </li>
-                        <li>
-                            <strong>Chili</strong>
-                            <ul>
-                                <li>This veggie packed chili is perfect for a chilly November evening. (Slow cooker)</li>
-                            </ul>
-                        </li>
+
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h3 class="text-center">Thanksgiving Sides</h3>
-                    <p>Do you need a side dish for Thanksgiving? Or all the sides? Dinner Delights to the rescue! I do the cooking so you can enjoy time with your family and friends. All you have to do it warm the dish up! Pick up is SATURDAY Nov. 18 from 12-4 at Capitol Hill Lutheran Church, 511 Des Moines St., Des Moines (<a href="https://goo.gl/maps/YHZSVLLdjC22" target="_blank">Open in Google Maps <i class="fa fa-external-link" aria-hidden="true"></i></a>). All dishes serve 14-16.</p>
-
-                    <p>Free to pick up! $5 for delivery.</p>
-
-                    <ul>
-                        <li>
-                            <strong>Mashed Potatoes and Gravy (GF)</strong>
-                            <ul>
-                                <li>Real, skin on mashed potatoes with a creamy roasted vegetable gravy. $15</li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <strong>Stuffing/Dressing</strong>
-                            <ul>
-                                <li>World famous (in parts of Colorado, New Mexico, and Iowa) stuffing! Homemade sour dough croutons mixed with veggies, herbs and pine nuts. Chicken or vegetable stock on the side for you to mix to your preferred moistness. $20</li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <strong>Sweet Potatoes (GF)</strong>
-                            <ul>
-                                <li>Baked sweet potatoes topped with brown sugar and spices. Comes with a bag of marshmallows for extra sweetness. $15</li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <strong>Scalloped Corn (can be made GF)</strong>
-                            <ul>
-                                <li>Creamy corn and cheese casserole. A great way to get more veggies. $15</li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <strong>Ginger Glazed Carrots (GF)</strong>
-                            <ul>
-                                <li>Carrots with a sweet ginger glaze. $15</li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <strong>Cranberry Pear Sauce (GF)</strong>
-                            <ul>
-                                <li>No can ridges here! A delicious sauce made from fresh cranberries, citrus and pears. It is our family favorite! $15</li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <strong>Pumpkin Pie Crunch (can be GF)</strong>
-                            <ul>
-                                <li>Looking for an alternative to pumpkin pie? Here is a great dessert! A delicious dump cake that will have no one missing pumpkin pie! $20</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <p class="text-center">
-                        <a href="http://buytickets.at/dinnerdelights/123929" class="btn btn-primary" target="_blank">BUY THANKSGIVING SIDES NOW</a>
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h3 class="text-center">Gifts in a Jar are back<span class="exclamation-font">!</span></h3>
+                    <h3 class="text-center">Gifts in a Jar are back
+                        <span class="exclamation-font">!</span>
+                    </h3>
                     <p>
-                        Through December you can make <strong>Hot Cocoa Mix, Pancake Mix, or Monster Cookies</strong>. They are perfect for anyone you need to give a quick, delicious handmade gift! Teachers, friends, service providers, or just because!
+                        Through December you can make
+                        <strong>Hot Cocoa Mix, Pancake Mix, or Monster Cookies</strong>. They are perfect for anyone you need to
+                        give a quick, delicious handmade gift! Teachers, friends, service providers, or just because!
                     </p>
                 </div>
             </div>
