--- a/themes/dinnerdelights/layout/_partial/masthead.ejs
+++ b/themes/dinnerdelights/layout/_partial/masthead.ejs
@@ -5,7 +5,7 @@
             <nav class="navbar">
                 <div class="container">
                     <div class="navbar-header">
-                        <a href="/" class="navbar-brand" style="fill:#fff"><img alt="Dinner Delights" src="/images/noun_98939_cc.svg">Dinner Delights</a>
+                        <a href="/" class="navbar-brand"><img alt="Dinner Delights" src="/images/DinnerDelights_Logo_Eggplant_1C_7652C.svg" /></a>
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#ftheme">
 							<span class="sr-only">Toggle</span>
 							<span class="icon-bar"></span>
