--- a/themes/dinnerdelights/source/css/style.css
+++ b/themes/dinnerdelights/source/css/style.css
@@ -1,3 +1,15 @@
+/* Branding Colors */
+/*
+Primary:
+Eggplant - #602650 - rgb 96, 38, 81
+Olive Green - #789b4a - rgb 120, 156, 74
+Pepper - #e43d2f - 228, 61, 48
+
+Secondary:
+Dark Mushroom - #5c534d - rgb 92, 83, 77
+Light Mushroom - #efeeeb - rgb 239, 238, 236
+*/
+
 /* Fonts */
 
 @font-face {
@@ -6,6 +18,16 @@
 	src: url('../fonts/corradine_fonts_-_typnictitling-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/corradine_fonts_-_typnictitling-webfont.woff2') format('woff2'), url('../fonts/corradine_fonts_-_typnictitling-webfont.woff') format('woff'), url('../fonts/corradine_fonts_-_typnictitling-webfont.otf') format('opentype'), url('../fonts/corradine_fonts_-_typnictitling-webfont.ttf') format('truetype'), url('../fonts/corradine_fonts_-_typnictitling-webfont.svg#typnic_titlingtitling') format('svg');
 	font-weight: normal;
 	font-style: normal;
+}
+
+@font-face {
+    font-family: 'wanderlust_lettersregular';
+    src: url('../fonts/cultivated_mind_-_wanderlust_letters-webfont.woff2') format('woff2'),
+		 url('../fonts/cultivated_mind_-_wanderlust_letters-webfont.woff') format('woff'), 
+		 url('../fonts/cultivated_mind_-_wanderlust_letters-webfont.otf') format('opentype'),
+		 url('../fonts/cultivated_mind_-_wanderlust_letters-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 
@@ -17,6 +39,10 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
 	position: relative;
+	background-color: #efeeeb;
+	/* background-image: url('../images/ThinkstockPhotos-545794038.jpg');
+	background-size: contain;
+	background-repeat: repeat-y; */
 }
 
 h1,
@@ -24,14 +50,13 @@ h2,
 h3,
 h4,
 h5,
-h6,
-.navbar-brand {
-	font-family: 'typnic_titling';
-	color: #5C306B;
+h6 {
+	font-family: 'wanderlust_lettersregular';
+	color: #602650;
 	line-height: 1.3;
 }
 
-.menu-archive h1,
+/* .menu-archive h1,
 .menu-archive h2,
 .menu-archive h3,
 .menu-archive h4,
@@ -49,7 +74,7 @@ h6 .exclamation-font {
 	font-family: 'Open Sans', sans-serif;
 	font-style: italic;
 	font-size: 1.3em;
-}
+} */
 
 a {
 	text-decoration: none;
@@ -71,7 +96,7 @@ input[type="text"],
 input[type="password"],
 input[type="email"],
 textarea {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-weight: 500;
 	color: #E5FFFE;
 	border-width: 1px;
@@ -95,7 +120,7 @@ input[type="password"]:focus,
 input[type="email"]:focus,
 textarea:focus {
 	background: rgba(41, 255, 248, 0.5);
-	border-color: #28FFF7 !important;
+	border-color: #789b4a !important;
 	outline: none;
 	color: #000819;
 }
@@ -119,15 +144,15 @@ textarea:focus {
 }
 
 .btn-default {
-	color: #5C306B;
+	color: #602650;
 	background-color: transparent;
-	border-color: #5C306B;
+	border-color: #602650;
 }
 
 .btn-default:hover,
 .btn-default:active {
 	color: #fff;
-	background-color: #5C306B;
+	background-color: #602650;
 	border-color: #fff;
 }
 
@@ -155,7 +180,7 @@ textarea:focus {
 .top-nav {
 	color: #000819;
 	line-height: 40px;
-	border-bottom: 1px solid #28FFF7;
+	border-bottom: 1px solid #789b4a;
 }
 
 
@@ -175,7 +200,7 @@ textarea:focus {
 }
 
 .top-left a:hover {
-	color: #28FFF7;
+	color: #789b4a;
 }
 
 
@@ -189,7 +214,7 @@ textarea:focus {
 	content: "\f041";
 	font-family: 'FontAwesome';
 	font-size: 16px;
-	color: #28FFF7;
+	color: #789b4a;
 	margin-right: 10px;
 }
 
@@ -239,22 +264,16 @@ textarea:focus {
 
 .navbar-brand img {
 	position: absolute;
-	top: 5px;
-	left: 5px;
+	top: 0;
+	left: 15px;
 	height: 50px;
 	width: 50px;
 }
 
-#main-nav .navbar-header a {
-	background-color: #5C306B;
-	color: #fff;
-}
-
-
 /*Toggle Menu*/
 
 #main-nav .navbar-toggle {
-	background-color: #28FFF7;
+	background-color: #789b4a;
 }
 
 #main-nav .navbar-toggle span {
@@ -280,14 +299,14 @@ textarea:focus {
 }
 
 #main-nav .navbar-right li>a:focus {
-	color: #28FFF7;
+	color: #789b4a;
 	background: none;
 	outline: none;
 }
 
 #main-nav .navbar-nav>li>a:hover,
 #main-nav .navbar-nav>li.active>a {
-	color: #28FFF7;
+	color: #789b4a;
 	background: none;
 }
 
@@ -295,14 +314,14 @@ textarea:focus {
 /* Feature image */
 
 .jumbotron {
-	background-color: #E5FFFE;
+	background-color: #efeeeb;
 	background-image: url('../images/DSC_0033-16.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
 	height: 80vh;
-	color: #28FFF7;
-	font-family: 'typnic_titling';
+	color: #789b4a;
+	font-family: 'wanderlust_lettersregular';
 }
 
 .jumbotron p {
@@ -312,14 +331,19 @@ textarea:focus {
 .jumbotron h1 {
 	display: inline-block;
 	padding: 15px 25vw 15px 15px;
-	background-color: #5C306B;
+	background-color: #602650;
 	color: #fff;
 	margin: 5px;
 }
 
-.btn-primary {
-	color: #5C306B;
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active {
+	color: #fff;
 	text-transform: uppercase;
+	background-color: #789b4a;
+	border-color: #789b4a;
 }
 
 .jumbotron .btn-primary {
@@ -355,7 +379,7 @@ textarea:focus {
 
 #slider .caption span {
 	padding: 0 10px;
-	background-color: #5C306B;
+	background-color: #602650;
 	color: #fff;
 }
 
@@ -364,23 +388,23 @@ textarea:focus {
 	font-size: 24px;
 	font-style: italic;
 	margin-top: 30px;
-	color: #28FFF7;
+	color: #789b4a;
 }
 
 #slider .caption button {
 	font-weight: 700;
 	font-size: 17px;
 	margin-top: 20px;
-	background-color: #5C306B;
+	background-color: #602650;
 	color: #fff;
 	border: 1px solid #fff;
 }
 
 #slider .caption button:hover {
 	background-color: #fff;
-	border: 1px solid #5C306B;
+	border: 1px solid #602650;
 	transition: 0.3s;
-	color: #5C306B;
+	color: #602650;
 }
 
 
@@ -400,7 +424,7 @@ textarea:focus {
 		font-style: italic;
 		margin: 0;
 		padding: 0;
-		color: #28FFF7;
+		color: #789b4a;
 	}
 	#slider .caption .btn {
 		width: 80px;
@@ -427,7 +451,7 @@ textarea:focus {
 		font-size: 16px;
 		font-style: italic;
 		margin-top: 15px;
-		color: #28FFF7;
+		color: #789b4a;
 	}
 	#slider .caption .btn {
 		width: 110px;
@@ -456,15 +480,15 @@ textarea:focus {
 	width: 12px;
 	height: 12px;
 	border-radius: 50%;
-	border: 1px solid #28FFF7;
+	border: 1px solid #789b4a;
 }
 
 #slider .flex-control-paging li a:hover {
-	background: #28FFF7;
+	background: #789b4a;
 }
 
 #slider .flex-control-paging li a.flex-active {
-	background: #28FFF7;
+	background: #789b4a;
 	width: 12px;
 	height: 12px;
 }
@@ -493,7 +517,7 @@ textarea:focus {
 /*About*/
 
 .about-content {
-	border: 8px solid rgba(40, 255, 247, 0.4);
+	border: 8px solid #789b4a;
 	padding: 5vw;
 	margin: 5px;
 	display: flex;
@@ -551,12 +575,12 @@ textarea:focus {
 #services .service-heading p {
 	margin-top: 20px;
 	line-height: 25px;
-	color: #E5FFFE;
+	color: #efeeeb;
 	margin-bottom: 50px;
 }
 
 .services-style-one {
-	background: #E5FFFE;
+	background: #efeeeb;
 	margin-top: 25px;
 }
 
@@ -584,7 +608,7 @@ textarea:focus {
 
 @media (min-width: 768px) {
 	.services-style-one .service-block {
-		flex: 1 0 33%;
+		flex: 1 0 50%;
 		padding: 25px;
 	}
 }
@@ -616,7 +640,7 @@ textarea:focus {
 	align-items: center;
 	justify-content: center;
 	border-radius: 50%;
-	background-color: #5C306B;
+	background-color: #602650;
 	color: #fff;
 	height: 135px;
 	width: 135px;
@@ -651,7 +675,7 @@ textarea:focus {
 }
 
 #services .service-footer-left h3>span {
-	color: #28FFF7;
+	color: #789b4a;
 }
 
 #services .service-footer-left p {
@@ -665,23 +689,23 @@ textarea:focus {
 }
 
 #services .service-footer-right .btn {
-	background-color: #28FFF7;
+	background-color: #789b4a;
 	font-weight: 600;
 	color: #001440;
-	border: 3px solid #28FFF7;
+	border: 3px solid #789b4a;
 }
 
 #services .service-footer-right .btn:hover {
 	background-color: #fff;
 	color: #001440;
-	border-color: #28FFF7;
+	border-color: #789b4a;
 }
 
 
 /*Menu*/
 
 .menu-container {
-	background-color: #E5FFFE;
+	background-color: #efeeeb;
 	padding: 15px;
 }
 
@@ -761,17 +785,18 @@ textarea:focus {
 
 #bottom-footer {
 	margin-top: 50px;
-	background-color: #001440;
+	background-image: url('../images/ThinkstockPhotos-545794038.jpg');
+	background-size: cover;
 	padding: 20px 0;
-	color: #28FFF7;
+	color: #5c534d;
 }
 
 #bottom-footer .footer-right ul>li>a {
-	color: #28FFF7;
+	color: #5c534d;
 }
 
 #bottom-footer .footer-right ul>li>a:hover {
-	color: #28FFF7;
+	color: #5c534d;
 }
 
 .monthly-menu-header {
