In progress rebranding

--- a/themes/dinnerdelights/layout/_partial/about.ejs
+++ b/themes/dinnerdelights/layout/_partial/about.ejs
@@ -4,8 +4,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <div class="section-heading">
-                    <h2>about</h2>
-                    <p>Welcome to Nights of Dinner Delights!</p>
+                    
                 </div>
             </div>
         </div>
@@ -14,13 +13,16 @@
             <div class="headshot">
                 <img src="/images/DSC_0162-1.jpg" alt="Andrea" class="img-responsive"/>
             </div>
-            <div class="text">
-                <p>We are all busy all the time but we still need to eat. Dinner Delights offers personal chef services from
-                    weekly meal preparation to monthly freezer meal parties.</p>
-                <p>After too many nights staring at the fridge with no easy to prepare meals and no time, I started making freezer
-                    meals. With a little bit of early preparation, I had delicious, quick meals to make the busy nights go
-                    a little smoother.</p>
-                <p>I started Dinner Delights to help your busy nights go a little smoother too!</p>
+            <div class="content">
+                <h2>About</h2>
+                <div class="text">
+                    <p>We are all busy all the time but we still need to eat. Dinner Delights offers personal chef services from
+                        weekly meal preparation to monthly freezer meal parties.</p>
+                    <p>After too many nights staring at the fridge with no easy to prepare meals and no time, I started making freezer
+                        meals. With a little bit of early preparation, I had delicious, quick meals to make the busy nights go
+                        a little smoother.</p>
+                    <p>I started Dinner Delights to help your busy nights go a little smoother too!</p>
+                </div>
             </div>
     </div>
 </div>
