--- a/themes/dinnerdelights/layout/_partial/joinaparty.ejs
+++ b/themes/dinnerdelights/layout/_partial/joinaparty.ejs
@@ -9,7 +9,7 @@
         </div>
     </div>
     <section class="join-container">
-        <div class="container">
+        <div class="container join-content">
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <p>
@@ -19,7 +19,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <a href="http://buytickets.at/dinnerdelights" class="btn btn-primary" target="_blank">RESERVE MY SPOT</a>
+                    <a href="http://buytickets.at/dinnerdelights" class="btn" target="_blank">RESERVE MY SPOT</a>
                 </div>
             </div>
         </div>
