--- a/themes/dinnerdelights/layout/_partial/head.ejs
+++ b/themes/dinnerdelights/layout/_partial/head.ejs
@@ -36,10 +36,10 @@
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#28fff7">
 		
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <%- css('css/flexslider.css') %>
     <!-- Bootstrap core CSS -->
-    <%- css('css/bootstrap.min') %>
+    <%- css('css/bootstrap') %>
     <!-- Font Awesome CSS -->
     <%- css('css/font-awesome.min') %>
     <%- css('css/style') %>
