--- a/themes/dinnerdelights/layout/_partial/services.ejs
+++ b/themes/dinnerdelights/layout/_partial/services.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-xs-12 col-md-6 col-md-offset-3">
                 <div class="section-heading">
-                    <h2>services</h2>
+                    <h2>Services</h2>
                 </div>
             </div>
         </div>
@@ -14,7 +14,11 @@
             <div class="row clearfix">
                 <div class="col-sm-10 col-sm-offset-1 service-container">
                     <div class="service-block">
-                        <div class="icon-box"><img src="/images/noun_172620_cc.svg" height="100" width="100" alt="" aria-hidden="true" /></div>
+                        <div class="icon-box">
+                            <div class="icon-border">
+                                <img src="/images/noun_172620_cc.svg" height="100" width="100" alt="" aria-hidden="true" />
+                            </div>
+                        </div>
                         <h4>Freezer Meal Parties</h4>
                         <div class="text">Each month I select a menu of 10-12 meals. You pick any six meals you want to prepare from the menu
                             and invite some friends over. I do all the shopping and preparation. I will arrive at the party
@@ -34,7 +38,11 @@
                         </div>
                     </div>
                     <div class="service-block">
-                        <div class="icon-box"><img src="/images/noun_782390_cc.svg" height="100" width="100" alt="" aria-hidden="true" /></div>
+                        <div class="icon-box">
+                            <div class="icon-border">
+                                <img src="/images/noun_782390_cc.svg" height="100" width="100" alt="" aria-hidden="true" />
+                            </div>
+                        </div>
                         <h4>Personal Chef Services</h4>
                         <div class="text">We work together to create a menu. I can do everything from preparing dinners to making three meals
                             a day and everything in between.</div>
