Adding link to order jars

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -105,8 +105,18 @@
                         <strong>Hot Cocoa Mix, Pancake Mix, or Monster Cookies</strong>. They are perfect for anyone you need to
                         give a quick, delicious handmade gift! Teachers, friends, service providers, or just because!
                     </p>
+                    <p class="text-center">
+                        Order your jars today!
+                    </p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center">
+                    <a href="http://buytickets.at/dinnerdelights/130152" class="btn btn-primary" target="_blank">ORDER JARS</a>
+                    <br/>
+                    <br/>
+                </div>
+            </div>            
         </div>
     </section>
     <div class="container menu-btn-container">
