Continuing branding and copy updates

--- a/themes/dinnerdelights/layout/_partial/head.ejs
+++ b/themes/dinnerdelights/layout/_partial/head.ejs
@@ -1,5 +1,9 @@
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Dinner Delights offers personal chef services to meet any budget or needs. Meal selections are fully-customized to your taste and dietary needs.">
+    <meta name="keywords" content="food,dinner,meals,personal chef,chef,supper">
+    <meta author="Dinner Delights, LLC">
+    
     <%
     var title = page.title;
 
