--- a/themes/dinnerdelights/layout/_partial/services.ejs
+++ b/themes/dinnerdelights/layout/_partial/services.ejs
@@ -20,10 +20,7 @@
                             </div>
                         </div>
                         <h4>Freezer Meal Parties</h4>
-                        <div class="text">Each month I select a menu of 10-12 meals. You pick any six meals you want to prepare from the menu
-                            and invite some friends over. I do all the shopping and preparation. I will arrive at the party
-                            location an hour before the party to set up. The party lasts about 90 minutes. At the end of
-                            the party, everyone will take home six meals.</div>
+                        <p class="text">Gather your girlfriends! Dinner Delights freezer meal parties are a fun way to assemble meals ahead of time so you can pull them out and have fresh, delicious dinners on the table in no time. Dinner Delights takes care of the menu planning, shopping and prepping. You and your girlfriends get together for an evening of assembling and socialization. At the end of the party, everyone takes home six meals. Ask me how the hostess can earn free meals!</p>
                         <div class="price-container">
                             <div class="price">
                                 <div class="price-value">$90</div>
@@ -44,14 +41,12 @@
                             </div>
                         </div>
                         <h4>Personal Chef Services</h4>
-                        <div class="text">We work together to create a menu. I can do everything from preparing dinners to making three meals
-                            a day and everything in between.</div>
+                        <p class="text">Let Dinner Delights be your personal culinary concierge! We work together to create a menu that is as unique as you. Want a hot, delicious home-cooked meal waiting for you when you walk in the door? Make tonight a Dinner Delight! Dinner Delights also offers one-on-one cooking instruction for those looking to sharpen their cooking skills and know-how.</p>
                         <div class="row">
                             <div class="col-xs-12">
                                 <div class="price">
-                                    <div>Starting at</div>
-                                    <div class="price-value">$100</div>
-                                    <div>per week</div>
+                                    <div>Contact me</div>
+                                    <div>for a quote!</div>
                                 </div>
                             </div>
                         </div>
