--- a/themes/dinnerdelights/layout/_partial/about.ejs
+++ b/themes/dinnerdelights/layout/_partial/about.ejs
@@ -1,14 +1,5 @@
 <!--about-->
 <div id="about">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                <div class="section-heading">
-                    
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="container about-content">
             <div class="headshot">
                 <img src="/images/DSC_0162-1.jpg" alt="Andrea" class="img-responsive"/>
@@ -16,12 +7,10 @@
             <div class="content">
                 <h2>About</h2>
                 <div class="text">
-                    <p>We are all busy all the time but we still need to eat. Dinner Delights offers personal chef services from
-                        weekly meal preparation to monthly freezer meal parties.</p>
-                    <p>After too many nights staring at the fridge with no easy to prepare meals and no time, I started making freezer
-                        meals. With a little bit of early preparation, I had delicious, quick meals to make the busy nights go
-                        a little smoother.</p>
-                    <p>I started Dinner Delights to help your busy nights go a little smoother too!</p>
+                    <p>We are all busy all the time but we still need to eat. Dinner Delights offers personal chef services to meet any budget or needs. Meal selections are fully-customized to your taste and dietary needs.</p>
+                    <p>After too many nights staring at the fridge with no easy to prepare meals and no time, I started making freezer meals. With a little bit of early preparation, I had delicious, quick meals to make the busy nights go a little smoother.</p>
+                    <p>I started Dinner Delights to help your busy nights go a little smoother so you too can</p>
+                    <h3>Make every night<br/>a Dinner Delight!</h3>
                 </div>
             </div>
     </div>
