--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -10,7 +10,7 @@
         </div>
     </div>
     <section class="menu-container">
-        <div class="container">
+        <div class="container menu-content">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <ul>
@@ -112,9 +112,7 @@
             </div>
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
-                    <a href="http://buytickets.at/dinnerdelights/130152" class="btn btn-primary" target="_blank">ORDER JARS</a>
-                    <br/>
-                    <br/>
+                    <a href="http://buytickets.at/dinnerdelights/130152" class="btn btn-buy-jars" target="_blank">ORDER JARS</a>
                 </div>
             </div>            
         </div>
