--- a/themes/dinnerdelights/source/css/style.css
+++ b/themes/dinnerdelights/source/css/style.css
@@ -145,6 +145,9 @@ textarea:focus {
 
 .btn-default {
 	color: #602650;
+	font-weight: 700;
+	font-size: 20px;
+	border-width: 3px;
 	background-color: transparent;
 	border-color: #602650;
 }
@@ -518,7 +521,6 @@ textarea:focus {
 
 .section-heading h2 {
 	font-size: 56px;
-	color: #efeeeb;
 }
 
 .section-heading p {
@@ -561,6 +563,10 @@ textarea:focus {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+}
+
+.about-content .content .text h3 {
+	text-align: center;
 }
 
 @media (min-width: 768px) {
@@ -720,6 +726,7 @@ textarea:focus {
 }
 
 .join-content .btn,
+.menu-container .btn-buy-jars,
 #services .service-footer-right .btn {
 	background-color: #e43d2f;
 	font-weight: 600;
@@ -727,18 +734,21 @@ textarea:focus {
 	border: 3px solid #efeeeb;
 }
 
-.join-content .btn { 
+.join-content .btn,
+.menu-container .btn-buy-jars { 
 	border-color: #e43d2f;
 }
 
 .join-content .btn:hover,
+.menu-container .btn-buy-jars:hover,
 #services .service-footer-right .btn:hover {
 	background-color: #efeeeb;
 	color: #e43d2f;
 	border-color: #efeeeb;
 }
 
-.join-content .btn:hover {
+.join-content .btn:hover,
+.menu-container .btn-buy-jars:hover {
 	border-color: #e43d2f;
 }
 
@@ -746,7 +756,7 @@ textarea:focus {
 /*Menu*/
 
 .menu-container {
-	background-color: #efeeeb;
+	/* background-color: #efeeeb; */
 	padding: 15px;
 }
 
@@ -866,7 +876,8 @@ i.fa.fa-external-link {
 	padding: 16px;
 }
 
-.join-content {
+.join-content,
+.menu-content {
 	border: 8px solid #789b4a;
 	background-color: #efeeeb;
 	padding: 5vw;
