Finished v1 of rebranding

--- a/themes/dinnerdelights/layout/_partial/home.ejs
+++ b/themes/dinnerdelights/layout/_partial/home.ejs
@@ -1,10 +1,10 @@
 <section class="feature-image">
     <div class="jumbotron">
         <div class="container">
-            <img src="/images/DSC_0033-16.jpg" alt="" aria-hidden="true" style="display:none;"/>
-            <p>Welcome to nights of</p>
-            <h1>Dinner Delights</h1>
-            <p><a class="btn btn-primary btn-lg" href="#contact" role="button">Contact me to schedule today!</a></p>
+            <div class="clearfix">
+            <img src="images/DinnerDelights_Logo_Eggplant_1C_7652C_w_white_shadow.svg" alt="Dinner Delights" class="pull-right"/>
+            </div>
+            <p><a class="btn btn-primary btn-lg" href="#contact" role="button">Schedule a party today!</a></p>
         </div>
     </div>
 </section>
