--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -97,9 +97,7 @@
             </div>
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h3 class="text-center">Gifts in a Jar are back
-                        <span class="exclamation-font">!</span>
-                    </h3>
+                    <h3 class="text-center">Gifts in a Jar are back!</h3>
                     <p>
                         Through December you can make
                         <strong>Hot Cocoa Mix, Pancake Mix, or Monster Cookies</strong>. They are perfect for anyone you need to
